add product to basket in product details page

--- a/src/Backoffice/Pages/Products/Details.cshtml
+++ b/src/Backoffice/Pages/Products/Details.cshtml
@@ -118,7 +118,7 @@
                             @Html.DisplayNameFor(model => model.ProductModel.CatalogAttributes[0].Price)
                         </th>
                         <th>
-                            @Html.DisplayNameFor(model => model.ProductModel.CatalogAttributes[0].ProductSKU)
+                            @Html.DisplayNameFor(model => model.ProductModel.CatalogAttributes[0].Sku)
                         </th>
                     </tr>
                 </thead>
@@ -141,7 +141,7 @@
                                     @Html.DisplayFor(model => model.ProductModel.CatalogAttributes[i].Price)
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(model => model.ProductModel.CatalogAttributes[i].ProductSKU)
+                                    @Html.DisplayFor(model => model.ProductModel.CatalogAttributes[i].Sku)
                                 </td>
                             </tr>
                         }
