--- a/src/Web/Pages/_product.cshtml
+++ b/src/Web/Pages/_product.cshtml
@@ -3,7 +3,7 @@
 
 <form asp-page="/Basket/Index" method="post">
 
-    <img class="esh-catalog-thumbnail" src="@Model.PictureUri" />
+    <a asp-page="/Product/Index" asp-route-id="@Model.ProductSku"><img class="esh-catalog-thumbnail" src="@Model.PictureUri" /></a>
     <input class="esh-catalog-button" type="submit" value="[ ADD TO BASKET ]" />
 
     <div class="esh-catalog-name">
@@ -20,5 +20,5 @@
     <input type="hidden" asp-for="@Model.Id" name="id" />
     <input type="hidden" asp-for="@Model.Name" name="name" />
     <input type="hidden" asp-for="@Model.PictureUri" name="pictureUri" />
-    <input type="hidden" asp-for="@Model.Price" name="price" />
+    <input type="hidden" asp-for="@Model.Price" name="price" />    
 </form>
