--- a/src/Backoffice/Pages/Products/Edit.cshtml
+++ b/src/Backoffice/Pages/Products/Edit.cshtml
@@ -11,7 +11,7 @@
 <hr />
 <form method="post" enctype="multipart/form-data">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-    <input type="hidden" asp-for="ProductModel.CatalogIllustrationTypeId" />
+    <input asp-for="ProductModel.Sku" type="hidden" />
     <div class="row">
         <div class="col-md-4">
             <div class="form-group">
