--- a/src/Web/Pages/Product/_productDetail.cshtml
+++ b/src/Web/Pages/Product/_productDetail.cshtml
@@ -20,12 +20,13 @@
     @for (int i = 0; i < Model.Attributes.Count; i++)
     {
         <input type="hidden" asp-for="Attributes[i].AttributeType" />
-        <div class="row dama-product-attr mb-md-4">
+        <div class="row dama-product-attr mb-2 mb-md-3">
             <label class="col-2 col-form-label">@Model.Attributes[i].Label</label>
             <div class="col-10">
-                <select asp-for="Attributes[i].Selected" class="form-control" asp-items="Model.Attributes[i].Items">
-                    <option>@Model.Attributes[i].DefaultText</option>
+                <select asp-for="Attributes[i].Selected" class="form-control atribute-items" asp-items="Model.Attributes[i].Items">
+                    <option value="-1">@Model.Attributes[i].DefaultText</option>
                 </select>
+                <span asp-validation-for="Attributes[i].Selected" class="text-danger"></span>
             </div>
         </div>
     }
