--- a/src/Web/Pages/_LoginPartial.cshtml
+++ b/src/Web/Pages/_LoginPartial.cshtml
@@ -1,63 +1,44 @@
 @using Microsoft.AspNetCore.Identity
 
-    @if (Context.User.Identity.IsAuthenticated)
+@if (Context.User.Identity.IsAuthenticated)
 {
-        <section class="col-lg-4 col-md-5 col-xs-12">
-            <div class="esh-identity">
-                <form asp-controller="Account" asp-action="Logout" method="post" 
-                      id="logoutForm" class="navbar-right">
-                    <section class="esh-identity-section">
-                        @*<div class="esh-identity-name">@User.FindFirst(x => x.Type == "preferred_username").Value</div>*@
-                        <img class="esh-identity-image" src="~/images/arrow-down.png">
-                    </section>
-
-                    @*<section class="esh-identity-drop">
-                        <a class="esh-identity-item"
-                           asp-page="/Order/Index">
-
-                            <div class="esh-identity-name esh-identity-name--upper">My orders</div>
-                            <img class="esh-identity-image" src="~/images/my_orders.png">
-                        </a>
-
-                        <a class="esh-identity-item"
-                           asp-page="/Account/Manage/Index">
-
-                            <div class="esh-identity-name esh-identity-name--upper">My account</div>
-                            <img class="esh-identity-image" src="~/images/my_orders.png">
-                        </a>
-
-
-                        <a class="esh-identity-item"
-                           href="javascript:document.getElementById('logoutForm').submit()">
-                            <div class="esh-identity-name esh-identity-name--upper">Log Out</div>
-                            <img class="esh-identity-image" src="~/images/logout.png">
-                        </a>
-                    </section>*@
-                </form>
-            </div>
-        </section>
-
-        <section class="col-lg-1 col-xs-12">
-            @await Component.InvokeAsync("Basket")
-        </section>
-
+    <li class="nav-item list-inline-item">
+        <a class="nav-link esh-identity-item px-0 px-sm-3"
+           asp-page="/Order/Index">
+            <i class="fas fa-shopping-bag fa-lg"></i>
+            <span class="d-none d-sm-inline">Minhas Encomendas</span>
+        </a>
+    </li>
+    <li class="nav-item list-inline-item">
+        <a class="nav-link esh-identity-item px-0 px-sm-3"
+           asp-page="/Account/Manage/Index">
+            <i class="fas fa-user fa-lg"></i>
+            <span class="d-none d-sm-inline">Minha Conta</span>
+        </a>
+    </li>
+    <li class="nav-item list-inline-item">
+        <form asp-controller="Account" asp-action="Logout" method="post"
+              id="logoutForm">
+            <a class="nav-link esh-identity-item px-0 px-sm-3"
+               href="javascript:document.getElementById('logoutForm').submit()">
+                <i class="fas fa-sign-out-alt fa-lg"></i>
+                <span class="d-none d-sm-inline">Sair</span>
+            </a>
+        </form>
+    </li>
+    <li class="list-inline-item">
+        @await Component.InvokeAsync("Basket")
+    </li>
 }
 else
 {
-        <section> @*class="col-lg-1 col-lg-offset-3 col-md-3 col-xs-6">*@
-            <div class="esh-identity">
-                <section class="esh-identity-section">
-                    <div class="esh-identity-item">
-
-                        <a asp-page="/Account/Signin" class="nav-link">
-                            Login
-                        </a>
-                    </div>
-                </section>
-            </div>
-        </section>
-
-        <section> @*class="col-lg-1 col-xs-12">*@
-            @await Component.InvokeAsync("Basket")
-        </section>
+    <li class="nav-item list-inline-item">
+        <a asp-page="/Account/Signin" class="nav-link px-0 px-sm-3">
+            <i class="fas fa-user fa-lg"></i>
+            <span class="d-none d-sm-inline">Login</span>
+        </a>
+    </li>
+    <li class="list-inline-item">
+        @await Component.InvokeAsync("Basket")
+    </li>
 }
