--- a/src/Web/Pages/Account/Register.cshtml
+++ b/src/Web/Pages/Account/Register.cshtml
@@ -1,54 +1,67 @@
 @page
 @model RegisterModel
 @{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = "Registo";
 }
-    <div class="brand-header-block">
-        <ul class="container">
-            <li class="active" style="margin-right: 65px;">Already have an account? 
-            <a asp-page="/Account/Signin">LOGIN</a></li>
-        </ul>
-    </div>
-    <div class="container account-login-container">
+<h2>Registo</h2>
+<div class="brand-header-block">
+    <p>Já tem uma conta? <a asp-page="/Account/Signin">Faça LOGIN aqui!</a></p>
+
+</div>
+<div class="account-login-container">
+    <form asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal">
         <div class="row">
-            <div class="col-md-12">
+
+            <div class="col-6">
                 <section>
-                    <form asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal">
-                        <div asp-validation-summary="All" class="text-danger"></div>
-                        <div class="form-group">
-                            <label asp-for="UserDetails.Email" class="col-md-2 control-label"></label>
-                            <div class="col-md-10">
-                                <input asp-for="UserDetails.Email" class="form-control" />
-                                <span asp-validation-for="UserDetails.Email" class="text-danger"></span>
-                            </div>
+                    <div asp-validation-summary="All" class="text-danger"></div>
+                    <div class="form-group">
+                        <label asp-for="UserDetails.Email" class="col-md-2 control-label"></label>
+                        <div class="col-md-10">
+                            <input asp-for="UserDetails.Email" class="form-control" />
+                            <span asp-validation-for="UserDetails.Email" class="text-danger"></span>
                         </div>
-                        <div class="form-group">
-                            <label asp-for="UserDetails.Password" class="col-md-2 control-label"></label>
-                            <div class="col-md-10">
-                                <input asp-for="UserDetails.Password" class="form-control" />
-                                <span asp-validation-for="UserDetails.Password" class="text-danger"></span>
-                            </div>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="UserDetails.Password" class="col-md-2 control-label"></label>
+                        <div class="col-md-10">
+                            <input asp-for="UserDetails.Password" class="form-control" />
+                            <span asp-validation-for="UserDetails.Password" class="text-danger"></span>
                         </div>
-                        <div class="form-group">
-                            <label asp-for="UserDetails.ConfirmPassword" class="col-md-2 control-label"></label>
-                            <div class="col-md-10">
-                                <input asp-for="UserDetails.ConfirmPassword" class="form-control" />
-                                <span asp-validation-for="UserDetails.ConfirmPassword" class="text-danger"></span>
-                            </div>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="UserDetails.ConfirmPassword" class="col-md-6"></label>
+                        <div class="col-md-10">
+                            <input asp-for="UserDetails.ConfirmPassword" class="form-control" />
+                            <span asp-validation-for="UserDetails.ConfirmPassword" class="text-danger"></span>
                         </div>
-                        <div class="form-group">
-                            <button type="submit" class="btn btn-default btn-brand btn-brand-big">&nbsp;REGISTER&nbsp;</button>
-                        </div>
-                        <p>
-                            Note that for demo purposes you don't need to register! Use the credentials shown below the 
-                            <a asp-action="signin">login screen</a>.
-                        </p>
-                    </form>
+                    </div>
+                    <div class="form-group col-6">
+                        <button type="submit" class="esh-catalog-button btn btn-default btn-brand btn-brand-big">&nbsp;REGISTAR&nbsp;</button>
+                    </div>
                 </section>
             </div>
+            
         </div>
-    </div>
+    </form>
+</div>
 
-    @section Scripts {
-        @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
-    }
+@section Scripts {
+    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
+    @*<script>
+        function toggleVisibility() {
+            var checked = $('#UserDetails_RegisterAddress').is(':checked');
+            if (checked) {
+                $('#address-details').removeClass('d-none').addClass('d-block');
+            } else {
+                $('#address-details').removeClass('d-block').addClass('d-none');
+            }
+        }
+        $(document).ready(function () {
+            toggleVisibility();
+            $('#UserDetails_RegisterAddress').click(function () {
+                toggleVisibility(); 
+            });
+        });
+    </script>*@
+}
