--- a/src/Web/Pages/Account/Signin.cshtml
+++ b/src/Web/Pages/Account/Signin.cshtml
@@ -6,59 +6,74 @@
 @{
     ViewData["Title"] = "Log in";
 }
-    <div class="brand-header-block">
-        <ul class="container">
-            @*<li><a asp-area="" asp-controller="Account" asp-action="Register">REGISTER</a></li>*@
-            <li class="active" style="margin-right: 65px;">LOGIN</li>
-        </ul>
-    </div>
-    <div class="container account-login-container">
-        <div class="row">
-            <div class="col-md-12">
-                <section>
-                    <form asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal">
-                        <h4>ARE YOU REGISTERED?</h4>
-                        <div asp-validation-summary="All" class="text-danger"></div>
-                        <div class="form-group">
-                            <label asp-for="LoginDetails.Email" class="control-label form-label"></label>
-                            <input asp-for="LoginDetails.Email" class="form-control form-input form-input-center" />
-                            <span asp-validation-for="LoginDetails.Email" class="text-danger"></span>
+<div class="account-login-container">
+    <div class="row">
+        <div class="col-sm-6">
+            <h2>Login</h2>
+            <section>
+                <form asp-route-returnurl="@ViewData["ReturnUrl"]" asp-page-handler="SignIn" method="post" class="form-horizontal">
+                    <h4>Já se registou?</h4>
+                    <div asp-validation-summary="All" class="text-danger"></div>
+                    <div class="form-group">
+                        <label asp-for="LoginDetails.Email" class="control-label form-label"></label>
+                        <input asp-for="LoginDetails.Email" class="form-control form-input form-input-center" />
+                        <span asp-validation-for="LoginDetails.Email" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="LoginDetails.Password" class="control-label form-label"></label>
+                        <input asp-for="LoginDetails.Password" class="form-control form-input form-input-center" />
+                        <span asp-validation-for="LoginDetails.Password" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <div class="checkbox">
+                            <label asp-for="LoginDetails.RememberMe">
+                                <input asp-for="LoginDetails.RememberMe" />
+                                @Html.DisplayNameFor(m => m.LoginDetails.RememberMe)
+                            </label>
                         </div>
-                        <div class="form-group">
-                            <label asp-for="LoginDetails.Password" class="control-label form-label"></label>
-                            <input asp-for="LoginDetails.Password" class="form-control form-input form-input-center" />
-                            <span asp-validation-for="LoginDetails.Password" class="text-danger"></span>
+                    </div>
+                    <div class="form-group col-3 p-0">
+                        <input type="submit" class="esh-catalog-button btn btn-default btn-brand btn-brand-big mt-0" value="&nbsp;LOG IN&nbsp;" />
+                    </div>
+                </form>
+            </section>
+        </div>
+        <div class="col-sm-6">
+            <h2>Registo</h2>
+            <section>
+                <h4>Registe-se!</h4>
+                <form asp-route-returnurl="@ViewData["ReturnUrl"]" asp-page-handler="Register" method="post" class="form-horizontal">
+                    <div asp-validation-summary="All" class="text-danger"></div>
+                    <div class="form-group">
+                        <label asp-for="UserDetails.Email" class="col-md-2 control-label"></label>
+                        <div class="col-md-10">
+                            <input asp-for="UserDetails.Email" class="form-control" />
+                            <span asp-validation-for="UserDetails.Email" class="text-danger"></span>
                         </div>
-                        <div class="form-group">
-                            <div class="checkbox">
-                                <label asp-for="LoginDetails.RememberMe">
-                                    <input asp-for="LoginDetails.RememberMe" />
-                                    @Html.DisplayNameFor(m => m.LoginDetails.RememberMe)
-                                </label>
-                            </div>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="UserDetails.Password" class="col-md-2 control-label"></label>
+                        <div class="col-md-10">
+                            <input asp-for="UserDetails.Password" class="form-control" />
+                            <span asp-validation-for="UserDetails.Password" class="text-danger"></span>
                         </div>
-                        <div class="form-group">
-                            <button type="submit" class="btn btn-default btn-brand btn-brand-big">&nbsp;LOG IN&nbsp;</button>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="UserDetails.ConfirmPassword" class="col-md-6"></label>
+                        <div class="col-md-10">
+                            <input asp-for="UserDetails.ConfirmPassword" class="form-control" />
+                            <span asp-validation-for="UserDetails.ConfirmPassword" class="text-danger"></span>
                         </div>
-                        <p>
-                            <a asp-page="/Account/Register" 
-                               asp-route-returnurl="@ViewData["ReturnUrl"]" class="text">Register as a new user?</a>
-                        </p>
-                        <p>
-                            Note that for demo purposes you don't need to register and can login with these credentials:
-                        </p>
-                        <p>
-                            User:     <b>demouser@microsoft.com</b>
-                        </p>
-                        <p>
-                            Password: <b>Pass@word1</b>
-                        </p>
-                    </form>
-                </section>
-            </div>
+                    </div>
+                    <div class="form-group col-6">
+                        <button type="submit" class="esh-catalog-button btn btn-default btn-brand btn-brand-big">&nbsp;REGISTAR&nbsp;</button>
+                    </div>
+                </form>
+            </section>
         </div>
     </div>
+</div>
 
-    @section Scripts {
-        @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
-    }
+@section Scripts {
+    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
+}
