--- a/src/Web/Pages/Basket/Checkout.cshtml
+++ b/src/Web/Pages/Basket/Checkout.cshtml
@@ -1,16 +1,144 @@
 ﻿@page
-    @model CheckoutModel
+@model CheckoutModel
 @{
-    ViewData["Title"] = "Checkout Complete";
+    ViewData["Title"] = "Encomendar";
 }
-<section class="esh-catalog-hero">
-    <div class="container">
-        <img class="esh-catalog-title" src="../images/main_banner_text.png" />
+
+<h2>Encomendar</h2>
+<form method="post">
+    <input type="hidden" asp-for="BasketModel.Id" />
+    <div class="row">
+        <div class="col-sm-9">
+            <h4>Como quer receber a sua encomenda?</h4>
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="row mr-1">
+                <div id="user-address-col" class="col-sm-6 dama-checkout-border">
+                    <div class="form-check">
+                        <input asp-for="UserAddress.UseUserAddress" class="form-check-input" type="radio" value="1" checked>
+                        <label class="form-check-label" asp-for="UserAddress.UseUserAddress">
+                            <strong>Na sua morada</strong>
+                        </label>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="UserAddress.Street"></label>
+                        <input class="form-control" asp-for="UserAddress.Street">
+                        <span asp-validation-for="UserAddress.Street" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="UserAddress.City"></label>
+                        <input class="form-control" asp-for="UserAddress.City">
+                        <span asp-validation-for="UserAddress.City" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="UserAddress.PostalCode"></label>
+                        <input class="form-control" asp-for="UserAddress.PostalCode">
+                        <span asp-validation-for="UserAddress.PostalCode" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="UserAddress.Country"></label>
+                        <select class="form-control" asp-for="UserAddress.Country">
+                            <option>Portugal</option>
+                        </select>
+                        <span asp-validation-for="UserAddress.Country" class="text-danger"></span>
+                    </div>
+                    <div class="form-check">
+                        <input type="checkbox" class="form-check-input" asp-for="UserAddress.SaveAddress">
+                        <label class="form-check-label" asp-for="UserAddress.SaveAddress"></label>
+                        <span asp-validation-for="UserAddress.SaveAddress" class="text-danger"></span>
+                    </div>
+                </div>
+                <div id="store-location-col" class="col-sm-6 dama-checkout-text">
+                    <div class="form-check">
+                        <input asp-for="UserAddress.UseUserAddress" class="form-check-input" type="radio" value="2">
+                        <label class="form-check-label">
+                            <strong>Levantar na loja</strong>
+                        </label>
+                    </div>
+                    <div class="form-group">
+                        <label>Morada</label>
+                        <div class="">
+                            <span>Mercado de Loulé, Praça da Republica, 8100-270 Loulé</span>
+                        </div>
+                        <div>
+                            <span>Banca Nº 44 - <a href="http://saborcomtradicao.com/" target="_blank"> Sabor com Tradição </a></span>
+                        </div>
+                    </div>
+                    <div>
+                        <laebel>Mapa</laebel>
+                    </div>
+                    <div class="mt-3">
+                        <iframe width="100%" height="300"
+                                frameborder="0" style="border:0"
+                                src="https://www.google.com/maps/embed/v1/place?key=AIzaSyB2Av0vyWQSV7OOZK_LdJ3i52TSC8pLPF8&q=Mercado+Municipal+de+Loulé+(Desde+1908)" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-3 bg-light pt-2">
+            <h4 class="text-center">Resumo da encomenda</h4>
+            <article class="row">
+                <section class="col-2">Qt.</section>
+                <section class="col-6">Produto</section>
+                <section class="col-4">Preço</section>
+            </article>
+            <hr />
+            <div class="dama-checkout-items">
+                @foreach (var item in Model.BasketModel.Items)
+                {
+                    <article class="row pt-1">
+                        <section class="col-2">@item.Quantity</section>
+                        <section class="col-6">
+                            @item.ProductName
+                            @foreach (var attr in item.Attributes)
+                            {
+                                <br />
+                                <span class="dama-basket-label">@attr.Label</span><span class="dama-basket-item"> @attr.Name</span>
+                            }
+                        </section>
+                        <section class="col-4">€ @item.UnitPrice.ToString("N2")</section>
+                    </article>
+                }
+            </div>
+            <hr />
+            <article class="row">
+                <section class="offset-2 col-6 text-right">Subtotal</section>
+                <section class="col-4 pl-0">€ @Model.BasketModel.SubTotal()</section>
+            </article>
+            <article id="shipping-cost" class="row">
+                <section class="offset-2 col-6 text-right">Portes</section>
+                <section class="col-4 pl-0 dama-product-price">@Model.BasketModel.DefaultShippingCost.ToString("N2")</section>
+            </article>
+            <article class="row">
+                <section class="offset-2 col-6 text-right">TOTAL</section>
+                <section id="basket-total" class="col-4 pl-0 dama-product-price">@Model.BasketModel.Total()</section>
+            </article>
+            <div class="dama-checkout-btn mb-3">
+                <input class="btn btn-default esh-basket-checkout p-1 m-auto" type="submit" value="[ Finalizar Encomenda ]" />
+            </div>
+        </div>
     </div>
-</section>
+</form>
 
-<div class="container">
-    <h1>Thanks for your Order!</h1>
+@section Scripts {
+    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
 
-    <a asp-page="/Index">Continue Shopping...</a>
-</div>
+    <script>
+        $(document).ready(function () {
+
+            $('input[type=radio][name="UserAddress.UseUserAddress"]').click(function () {
+                if (this.value == '1') {
+                    $('#shipping-cost').removeClass('d-none').addClass('d-flex');
+                    $('#basket-total').text(toNumber(@Model.BasketModel.Total()));
+                    $('#user-address-col').addClass('dama-checkout-border');
+                    $('#store-location-col').removeClass('dama-checkout-border');
+                }
+                else if (this.value == '2') {
+                    $('#shipping-cost').removeClass('d-flex').addClass('d-none');                    
+                    $('#basket-total').text(toNumber(@Model.BasketModel.SubTotal()));
+                    $('#user-address-col').removeClass('dama-checkout-border');
+                    $('#store-location-col').addClass('dama-checkout-border');
+                }
+            });
+        });
+    </script>
+}
