--- a/src/Web/wwwroot/css/basket/basket-status/basket-status.component.css
+++ b/src/Web/wwwroot/css/basket/basket-status/basket-status.component.css
@@ -1,17 +1,33 @@
 ﻿.esh-basketstatus {
-  cursor: pointer;
-  display: inline-block;
-  float: right;
-  position: relative;
-  transition: all 0.35s; }
-  .esh-basketstatus.is-disabled {
-    opacity: .5;
-    pointer-events: none; }
-  .esh-basketstatus-image {
+    cursor: pointer;
+    display: inline-block;
+    float: right;
+    position: relative;
+    transition: all 0.35s;
+}
+
+    .esh-basketstatus.is-disabled {
+        opacity: .5;
+        pointer-events: none;
+    }
+
+.esh-basketstatus-image {
     height: 36px;
-    margin-top: .5rem; }
-  .esh-basketstatus-badge {
-    background-color: #83D01B;
+    margin-top: .5rem;
+}
+
+@media (max-width: 576px) {
+    .esh-basketstatus-image {
+        height: 26px;
+    }
+    .esh-basketstatus-image img {
+        height: 26px;
+        margin-top: 7px;
+    }
+}
+
+.esh-basketstatus-badge {
+    background-color: #EF7C8D;
     border-radius: 50%;
     color: #FFFFFF;
     display: block;
@@ -22,8 +38,18 @@
     top: 0;
     transform: translateX(-38%);
     transition: all 0.35s;
-    width: 1.5rem; }
-  .esh-basketstatus-badge-inoperative {
+    width: 1.5rem;
+}
+@media (max-width: 576px) {
+    .esh-basketstatus-badge {
+        height: 1rem;
+        width: 1rem;
+        font-size: 12px;
+        margin-top: 11px;
+    }
+}
+
+.esh-basketstatus-badge-inoperative {
     background-color: #ff0000;
     border-radius: 50%;
     color: #FFFFFF;
@@ -35,9 +61,11 @@
     top: 0;
     transform: translateX(-38%);
     transition: all 0.35s;
-    width: 1.5rem; }
-  .esh-basketstatus:hover .esh-basketstatus-badge {
-    background-color: transparent;
-    color: #75b918;
-    transition: all 0.35s; }
+    width: 1.5rem;
+}
 
+.esh-basketstatus:hover .esh-basketstatus-badge {
+    background-color: transparent;
+    color: #fff;
+    transition: all 0.35s;
+}
